<resources>
    <string name="appName">Intelligent module</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="font_path">fonts/trebucbd.ttf</string>
    <string name="normal_font_path">fonts/trebuc.ttf</string>
    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>
    <string name="action_about">About</string>
    <string name="action_settings">Settings</string>
    <string name="action_connect">CONNECT</string>
    <string name="action_select">SELECT DEVICE</string>
    <string name="action_disconnect">DISCONNECT</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="drawer_plugins">PLUGINS</string>
    <string name="drawer_plugin_mcp">nRF Master Control Panel</string>
    <string name="battery">%d%%</string>
    <string name="progress">%d%%</string>
    <string name="not_available">n/a</string>
    <string name="not_available_value">" - "</string>
    <string name="no_ble">Device doesn\'t have BLE support!</string>
    <string name="no_apps">No profiles found.</string>
    <string name="not_supported">The device does not have required services.</string>
    <string name="no_application">Web Browser application is not available.</string>
    <string name="no_application_play">Google Play not installed.</string>
    <string name="scanner_title">Select device:</string>
    <string name="scanner_empty">No device found</string>
    <string name="scanner_action_scan">Scan</string>
    <string name="scanner_action_cancel">Cancel</string>
    <string name="scanner_subtitle_bonded">BONDED DEVICES:</string>
    <string name="scanner_subtitle__not_bonded">AVAILABLE DEVICES:</string>
    <string name="bonding">Bonding with the device&#8230;</string>
    <string name="bonded">The device is now bonded.</string>
    <string name="log" formatted="false">%1$tR:%1$tS.%1$tL</string>
    <string name="about_title">About</string>
    <string name="about_version">\n\nVersion: %s</string>
    <string name="about_text">The nRF Toolbox is a container application that stores your Nordic Semiconductor apps in one location.</string>
    <string name="title_activity_dfu">DfuActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="powered"></string>
    <string name="dfu_unknown_name">unnamed device</string>
    <string name="dfu_action_abort">Abort</string>
    <string name="dfu_service_title">nRF Toolbox DFU Proxy</string>
    <string name="dfu_status_initializing">Initializing&#8230;</string>
    <string name="dfu_status_connecting">Connecting&#8230;</string>
    <string name="dfu_status_starting">Starting DFU&#8230;</string>
    <string name="dfu_status_switching_to_dfu">Starting bootloader&#8230;</string>
    <string name="dfu_status_uploading">Uploading&#8230;</string>
    <string name="dfu_status_uploading_part" formatted="false">Uploading part %d/%d&#8230;</string>
    <string name="dfu_status_validating">Validating&#8230;</string>
    <string name="dfu_status_disconnecting">Disconnecting&#8230;</string>
    <string name="dfu_status_completed">Done</string>
    <string name="dfu_status_aborted">Aborted</string>
    <string name="dfu_status_aborting">Aborting&#8230;</string>
    <string name="dfu_status_error">Upload failed</string>
    <string name="dfu_status_connecting_msg">Connecting to %s&#8230;</string>
    <string name="dfu_status_starting_msg">Initializing DFU process&#8230;</string>
    <string name="dfu_status_switching_to_dfu_msg">Waiting for bootloader&#8230;</string>
    <string name="dfu_status_uploading_components_msg">Transmitting components to %s&#8230;</string>
    <string name="dfu_status_uploading_msg">Transmitting application to %s&#8230;</string>
    <string name="dfu_status_validating_msg">Validating&#8230;</string>
    <string name="dfu_status_completed_msg">Application has been send successfully.</string>
    <string name="dfu_status_aborted_msg">Application upload has been canceled.</string>
    <string name="dfu_status_disconnecting_msg">Disconnecting from %s&#8230;</string>
    <string name="dfu_status_error_msg">DFU process failed.</string>
    <string name="dfu_uploading_percentage_label">0%</string>
    <string name="dfu_uploading_percentage">%d%%</string>
    <string name="dfu_default_name">DEFAULT DFU</string>
    <string name="dfu_confirmation_dialog_title">Application Uploading</string>
    <string name="dfu_confirmation_dialog_exit_message">Are you sure to exit?</string>
    <string name="dfu_upload_dialog_cancel_message">Are you sure to cancel upload?</string>
    <string name="dfu_success">Application has been transferred successfully.</string>
    <string name="dfu_aborted">Uploading of the application has been canceled.</string>
    <string name="dfu_sftp_status_connecting">Connecting server...</string>
    <string name="dfu_sftp_status_connected_success">Connect to the server success.</string>
    <string name="dfu_sftp_status_connected_faild">Connect to the server failed!</string>
    <string name="dfu_sftp_status_downloading">Download firmware file...</string>
    <string name="dfu_sftp_status_download_success">Download firmware file success.</string>
    <string name="dfu_sftp_status_download_faild">Download firmware file failed!</string>
    <string name="dfu_sftp_status_list_file">Get firmware file list...</string>
    <string name="dfu_sftp_status_list_file_success">Get firmware file list success.</string>
    <string name="dfu_sftp_status_list_file_faild">Get firmware file list failed!</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Please enter the cell phone number</string>
    <string name="prompt_password">Please enter the Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="settingUserInfo">Please set gender</string>
    <string name="settingHeight">Please set height</string>
    <string name="settingWeight">Please set weight</string>
    <string name="settingAge">Please set age</string>
    <string name="settingSteps">Please set the target steps</string>
    <string name="settingSex">Please set the Sex</string>
    <string name="controlCenter">Control Center</string>
    <string name="historyData">History Data</string>
    <string name="NoPromiss">NO Premiss</string>
    <string name="step">step</string>
    <string name="loginSuccess">Login Success</string>
    <string name="loginFail">Login Fail</string>
    <string name="SmsSendSuccess">SMS send Success</string>
    <string name="SmsSendFail">SMS send Fail</string>
    <string name="getSms">Get SMS</string>
    <string name="inputSms">Input SMS</string>
    <string name="reStart">Retry retry after%1$d seconds</string>
    <string name="ValueRange">The range of value A-Z, A-Z, 0-9, must be 6-20.</string>
    <string name="SyncSteps">Syncing Data</string>
    <string name="SyncComplete">Sync complete</string>
    <string name="connectFail">Device Connect Fail</string>
    <string name="connectSuccess">Device Connect Success</string>
    <string name="connecting">Connecting...</string>
    <string name="disconnect">disConnect</string>
    <string name="searching">Searching...</string>
    <string name="unSupportBle">not Support BLE</string>
    <string name="selectAndReSearch">Click the icon above to search again</string>
    <string name="uninstall">uninstall</string>
    <string name="doFail">do Fail</string>
    <string name="FirstPage">Pedometer</string>
    <string name="stepsTarget">Target%1$d steps</string>
    <string name="Usercontrol">User Center</string>
    <string name="inputPhone">Input Phone Number</string>
    <string name="SimunValid">SIM is not Support</string>
    <string name="searchPage">Search Page</string>
    <string name="premissBle">If you allow permission to locate, you can find Bluetooth devices.</string>
    <string name="FileOkUpdating">The document has been proofread successfully and is being upgraded</string>
    <string name="UpdateSuccess">Update Success</string>
    <string name="UpdateFail">Update Fail</string>
    <string name="DFU">Update DFU</string>
    <string name="LoadingFile">loading File</string>
    <string name="selectAndFile">Click the upper right to get the file</string>
    <string name="NoFile">no File</string>
    <string name="FileFormatWrong">File format is wrong, please add the correct format file</string>
    <string name="chooseFile">Choose File</string>
    <string name="man">Man</string>
    <string name="woman">Woman</string>
    <string name="noknown">noknown</string>
    <string name="year">year</string>
    <string name="NearPhone">Do not keep the device away from the mobile phone during the upgrade process!!</string>
    <string name="UpdateWaiting">Upateing，please wait a little</string>
    <string name="UpdateWaiting2">Upateing，please wait a little</string>
    <string name="powerState">Power Status</string>
    <string name="BoradState">Broad Status</string>
    <string name="LoadResistance">Load Resistance</string>
    <string name="deviceType">Device Type</string>
    <string name="FirmwareVersion">Firmware Version</string>
    <string name="DeviceInfo">DeviceInfo</string>
    <string name="on">on</string>
    <string name="off">off</string>
    <string name="today">Today</string>
    <string name="wxLogin">wechat Login</string>
    <string name="phoneLogin">Phone Login</string>
    <string name="phoneRegister">Phone Register</string>
    <string name="registerSuccess">Register Success</string>
    <string name="registerFail">Register Fail</string>
    <string name="passwordLogin">Password Login</string>
    <string name="selectLogin">select Login</string>
    <string name="loginSyncDate">Login Sync Data</string>
    <string name="rsgistering">Registering</string>
    <string name="rsgisterPhone">Phonr register</string>
    <string name="otherLogin">Other Login way</string>
    <string name="batteryValue">battery Value(%)</string>
    <string name="ResistanceValue">Resistance Value(Ω)</string>
    <string name="targetSteps">target Steps</string>
    <string name="NotifySteps">Notify Steps</string>
    <string name="FunctionSteps">FunctionSteps</string>
    <string name="personalInfo">personalInfo</string>
    <string name="deviceControl">Device Control</string>
    <string name="addDevice">Search Device</string>
    <string name="logOff">logOff</string>
    <string name="DirectEntry">Direct Entry</string>
    <string name="sharePage">sharePage</string>
    <string name="todayDate">Today data</string>
    <string name="help">help</string>
    <string name="sex">Sex</string>
    <string name="age">Age</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="APPVersion">APP Version</string>
    <string name="ChoosePhotographMode">Choose Photograph Mode </string>
    <string name="keyPhotograph">Key Photograph</string>
    <string name="shakePhotograph">Shake Photograph</string>
    <string name="choosePhoto">Choose Heard Image</string>
    <string name="choosePhotoMode">Please Choose Heard Image Mode</string>
    <string name="changeByAlbum">Choose By Album</string>
    <string name="takePhoto">Take Photo</string>
    <string name="sumDaySteps">Cumulative exercise day%1$d</string>
    <string name="View_Day">Diurnal view</string>
</resources>