<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#333333"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.embednet.wdluo.bleplatformsdkdemo.app.LoginActivity">


    <ImageView
        android:id="@+id/img_bg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop" />


    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50px"
        android:layout_marginTop="200px"
        android:text="@string/phoneLogin"
        android:textColor="@color/white"
        android:textSize="30sp" />


    <LinearLayout
        android:id="@+id/email_login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_margin="80px"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/white">

            <AutoCompleteTextView
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_email"
                android:inputType="phone"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="#ffffff"
                android:textColorHint="#ffffff"
                android:textColorLink="@color/white"
                android:textSize="20sp" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/login2Password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/white"
            android:visibility="gone">

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password"
                android:imeActionId="6"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="#ffffff"
                android:textColorHint="#ffffff"
                android:textColorLink="@color/white"
                android:textSize="20sp" />

        </android.support.design.widget.TextInputLayout>


        <RelativeLayout
            android:id="@+id/Login2Code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/white">

                <EditText
                    android:id="@+id/code"
                    android:layout_width="650px"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:hint="@string/inputSms"
                    android:imeActionId="6"
                    android:imeOptions="actionUnspecified"
                    android:inputType="number"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="#ffffff"
                    android:textColorHint="#ffffff"
                    android:textSize="20sp" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/sendCode"
                android:layout_width="200px"
                android:layout_height="100px"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@drawable/select_button_green"
                android:gravity="center"
                android:text="@string/getSms"
                android:textColor="@color/white" />

        </RelativeLayout>


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical">


            <TextView
                android:id="@+id/loginMode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="loginmode"
                android:text="@string/passwordLogin"
                android:textColor="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:onClick="register"
                android:text="@string/rsgistering"
                android:textColor="@color/white" />

        </RelativeLayout>

        <Button
            android:id="@+id/email_sign_in_button"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/select_button_green"
            android:text="@string/action_sign_in"
            android:textColor="@color/white"
            android:textStyle="bold" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20px"
            android:gravity="center"
            android:orientation="horizontal">

            <View
                android:layout_width="0dp"
                android:layout_height="0.5dp"
                android:layout_weight="1"
                android:background="@color/white" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40px"
                android:layout_marginRight="40px"
                android:layout_weight="1"
                android:text="@string/otherLogin"
                android:textColor="@color/white" />

            <View
                android:layout_width="0dp"
                android:layout_height="0.5dp"
                android:layout_weight="1"
                android:background="@color/white" />


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="120px"
            android:layout_marginBottom="60px"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:onClick="wechar">

                <ImageView
                    android:id="@+id/wechar"
                    android:layout_width="80px"
                    android:layout_height="80px"
                    android:src="@mipmap/img_wechar" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:onClick="QQ">

                <ImageView
                    android:id="@+id/QQ"
                    android:layout_width="80px"
                    android:layout_height="80px"
                    android:src="@mipmap/img_qq" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:onClick="WeiBo">

                <ImageView
                    android:id="@+id/weibo"
                    android:layout_width="80px"
                    android:layout_height="80px"
                    android:src="@mipmap/img_weibo" />


            </LinearLayout>


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:onClick="WeiBo">

                <ImageView
                    android:id="@+id/facabook"
                    android:layout_width="80px"
                    android:layout_height="80px"
                    android:src="@mipmap/facebook" />


            </LinearLayout>


        </LinearLayout>

    </LinearLayout>


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/powered"
        android:textColor="@color/white" />

</RelativeLayout>
