<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_bg"
    tools:context="com.embednet.wdluo.JackYan.app.ScnnerActivity">


    <include
        android:id="@+id/title"
        layout="@layout/title_layout" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/email_sign_in_button"
        android:layout_below="@+id/title"
        android:orientation="vertical">

        <com.github.jlmd.animatedcircleloadingview.AnimatedCircleLoadingView
            android:id="@+id/circle_loading_view"
            android:layout_width="500px"
            android:layout_height="500px"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            />


        <TextView
            android:id="@+id/bleStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/selectAndReSearch"
            android:textColor="@color/white" />


        <ListView
            android:id="@+id/mListView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20px" />

    </LinearLayout>


    <Button
        android:id="@+id/email_sign_in_button"
        style="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="100px"
        android:layout_above="@+id/textView"
        android:layout_margin="60px"
        android:background="@drawable/select_button_blue"
        android:onClick="login"
        android:text="@string/DirectEntry"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/powered"
        android:textColor="@color/white" />
</RelativeLayout>
