<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#333333"
    tools:context=".app.UserInfoActivity">


    <include
        android:id="@+id/title"
        layout="@layout/title_layout" />


    <LinearLayout
        android:id="@+id/heard"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_below="@+id/title"
        android:gravity="center"
        android:orientation="vertical">


        <com.embednet.wdluo.bleplatformsdkdemo.ui.CircleImageView
            android:id="@+id/userImg"
            android:layout_width="160px"
            android:layout_height="160px"
            android:src="@mipmap/img_heard" />


        <TextView
            android:id="@+id/userName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40px"
            android:text="@string/appName"
            android:textColor="@color/white"
            android:textStyle="bold" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/heard"
        android:orientation="vertical"
        android:padding="30px">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="110px"
            android:onClick="sex">


            <TextView
                android:id="@+id/sex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sex"
                android:textColor="@color/white"
                android:textSize="50px"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text_sex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/sex"
                android:layout_centerVertical="true"
                android:text="@string/man"
                android:textColor="@color/white" />


            <ImageView
                android:layout_width="40px"
                android:layout_height="40px"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:src="@mipmap/icon_right" />


        </RelativeLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/layout1"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:background="@color/gray" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="110px"
            android:onClick="age">


            <TextView
                android:id="@+id/age"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/age"
                android:textColor="@color/white"
                android:textSize="50px"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text_age"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/age"
                android:layout_centerVertical="true"
                android:text="20岁"
                android:textColor="@color/white" />


            <ImageView
                android:layout_width="40px"
                android:layout_height="40px"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:src="@mipmap/icon_right" />


        </RelativeLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/layout1"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:background="@color/gray" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="110px"
            android:onClick="height">


            <TextView
                android:id="@+id/height"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/height"
                android:textColor="@color/white"
                android:textSize="50px"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text_height"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/height"
                android:layout_centerVertical="true"
                android:text="175cm"
                android:textColor="@color/white" />


            <ImageView
                android:layout_width="40px"
                android:layout_height="40px"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:src="@mipmap/icon_right" />


        </RelativeLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/layout1"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:background="@color/gray" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="110px"
            android:onClick="weight">


            <TextView
                android:id="@+id/weight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weight"
                android:textColor="@color/white"
                android:textSize="50px"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text_weight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/weight"
                android:layout_centerVertical="true"
                android:text="60kg"
                android:textColor="@color/white" />


            <ImageView
                android:layout_width="40px"
                android:layout_height="40px"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:src="@mipmap/icon_right" />

        </RelativeLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/layout1"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:background="@color/gray" />

    </LinearLayout>


</RelativeLayout>
